--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -179,5 +179,10 @@ new_features:
     :ref:`enforce_response_header_limits <envoy_v3_api_field_extensions.filters.http.ext_authz.v3.ExtAuthz.enforce_response_header_limits>`
     that allows admins to enable / disable the behavior of dropping response headers once the header
     map count / size constraints have been reached.
+- area: router
+  change: |
+    Added support for substitution formatting in direct response bodies via the new
+    :ref:`body_format <envoy_v3_api_field_config.route.v3.DirectResponseAction.body_format>` field
+    in :ref:`DirectResponseAction <envoy_v3_api_msg_config.route.v3.DirectResponseAction>`.
 
 deprecated:
