--- a/test/coverage.yaml
+++ b/test/coverage.yaml
@@ -7,6 +7,7 @@ directories:
   source/common/api: 95.3  # some syscalls require sandboxing
   source/common/api/posix: 94.9  # setns requires Linux CAP_NET_ADMIN privileges
   source/common/crypto: 91.0  # Static singleton initialization and OpenSSL internal error paths not testable
+  source/common/event: 94.3
   source/common/filesystem/posix: 96.4  # FileReadToEndNotReadable fails in some env; createPath can't test all failure branches.
   source/common/http: 96.5
   source/common/http/http1: 93.4  # To be removed when http_inspector_use_balsa_parser is retired.
