--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -184,9 +184,9 @@ new_features:
     Added :ref:`access_log <envoy_v3_api_field_extensions.filters.udp.dns_filter.v3.DnsFilterConfig.access_log>` for DNS filter.
 - area: quic
   change: |
-    Add a new quic configuration field, 'max_sessions_per_event_loop', to QuicProtocolOptions in Envoy listener.
-    This allows tuning the maximum number of new QUIC sessions created within a single event loop.
-    The default value is 16, preserving the previous hardcoded limit.
+    Added QUIC protocol option :ref:`max_sessions_per_event_loop
+    <envoy_v3_api_field_config.listener.v3.QuicProtocolOptions.max_sessions_per_event_loop>` to limit the maximum
+    number of new QUIC sessions created per event loop. The default is 16, preserving the previous hardcoded limit.
 - area: ext_authz
   change: |
     Add a new configuration field to the http ext authz filter
