Tap/Transport tap/streamed trace segment: fix missing bytes-to-string conversion for multi-event socket events (#41735)
Signed-off-by: fchen7 <cliff.chen@nokia.com>
Signed-off-by: Cliff Chen <cliff.chen@nokia.com>

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -64,6 +64,9 @@ bug_fixes:
   change: |
     Fixed a bug where Lua filters could cause Envoy to crash when setting the response body to a payload larger
     than the body buffer limit.
+- area: tap
+  change: |
+    Add the missing conversion support to ensure tapped message are correctly handled for multi-event submissions.
 - area: bootstrap
   change: |
     Fixed an issue where the custom
