--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -81,6 +81,9 @@ bug_fixes:
     Fixed ``shouldDrainConnectionUponCompletion()`` to properly send ``GOAWAY`` frames for HTTP/2 and HTTP/3
     instead of aggressively closing connections. This prevents response body transmission interruption and
     ``ERR_DRAINING`` errors on the client side. HTTP/1.1 behavior remains unchanged.
+- area: udp_proxy
+  change: |
+    Fixed a few areas where the addresses might be moved from the data packet being processed.
 - area: composite
   change: |
     Fixed per-route configuration for composite filter to support matching on response headers and trailers.
