--- a/test/extensions/filters/listener/proxy_protocol/BUILD
+++ b/test/extensions/filters/listener/proxy_protocol/BUILD
@@ -95,3 +95,22 @@ envoy_extension_cc_test(
         "@envoy_api//envoy/extensions/filters/network/tcp_proxy/v3:pkg_cc_proto",
     ],
 )
+
+envoy_extension_cc_test(
+    name = "proxy_protocol_metadata_integration_test",
+    size = "large",
+    srcs = ["proxy_protocol_metadata_integration_test.cc"],
+    extension_names = ["envoy.filters.listener.proxy_protocol"],
+    deps = [
+        ":proxy_proto_integration_test_lib",
+        "//source/common/buffer:buffer_lib",
+        "//source/common/network:address_lib",
+        "//source/extensions/filters/listener/proxy_protocol:config",
+        "//test/integration:http_integration_lib",
+        "//test/test_common:network_utility_lib",
+        "//test/test_common:test_runtime_lib",
+        "//test/test_common:utility_lib",
+        "@envoy_api//envoy/config/bootstrap/v3:pkg_cc_proto",
+        "@envoy_api//envoy/extensions/filters/listener/proxy_protocol/v3:pkg_cc_proto",
+    ],
+)
