--- a/reviewers.yaml
+++ b/reviewers.yaml
@@ -17,6 +17,7 @@ daixiang0:
   slack: U020CJG6UU8
 danzh2010:
   maintainer: true
+  opsgenie: Dan
   slack: UDR2MA31P
 ggreenway:
   maintainer: true
