--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -193,6 +193,11 @@ new_features:
     Added QUIC protocol option :ref:`max_sessions_per_event_loop
     <envoy_v3_api_field_config.listener.v3.QuicProtocolOptions.max_sessions_per_event_loop>` to limit the maximum
     number of new QUIC sessions created per event loop. The default is 16, preserving the previous hardcoded limit.
+- area: network
+  change: |
+    Added a change to start populating the filter state ``envoy.network.network_namespace`` when a connection is accepted on a
+    listener with :ref:`network_namespace_filepath <envoy_v3_api_field_config.core.v3.SocketAddress.network_namespace_filepath>`
+    configured. This provides read-only access to the network namespace for filters, access logs, and other components.
 - area: ext_authz
   change: |
     Add a new configuration field to the http ext authz filter
