--- a/test/coverage.yaml
+++ b/test/coverage.yaml
@@ -49,6 +49,7 @@ directories:
   source/extensions/filters/http/oauth2: 97.6
   source/extensions/filters/listener: 96.5
   source/extensions/filters/listener/original_src: 92.1
+  source/extensions/filters/listener/proxy_protocol: 96.1
   source/extensions/filters/listener/tls_inspector: 94.4
   source/extensions/filters/network/dubbo_proxy: 96.2
   source/extensions/filters/network/mongo_proxy: 96.1
