--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -234,6 +234,9 @@ new_features:
   change: |
     Added runtime guard ``envoy.reloadable_features.report_load_when_rq_active_is_non_zero``.
     When enabled, LRS continues to send locality_stats reoprt to config server when there is no request_issued in the poll cycle.
-
+- area: oauth2_filter
+  change: |
+    Added :ref:`forward_bearer_token_type <envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.forward_bearer_token_type>`
+    to define with token type to forward.
 
 deprecated:
