logging: support process level access log rate limiting (#40992)
Commit Message: support process level access log rate limiting
Additional Description: this is used to rate limit access log emission
on the process level. A typical usage is to rate limit logging to stdout
or file when you have multiple access loggers. Fix
https://github.com/envoyproxy/envoy/issues/40103
Risk Level: NA as this is a new extension
Testing: unit tests and integration test are added
Docs Changes: updated
Release Notes: updated
Platform Specific Features:NA

---------

Signed-off-by: Xuyang Tao <taoxuy@google.com>
Co-authored-by: code <wbphub@gmail.com>

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -122,6 +122,10 @@ removed_config_or_runtime:
     Removed runtime guard ``envoy.reloadable_features.report_load_with_rq_issued`` and legacy code paths.
 
 new_features:
+- area: access_log
+  change: |
+    Support process-level rate limiting on access log emission by
+    :ref:`ProcessRateLimitFilter <envoy_v3_api_msg_extensions.access_loggers.filters.process_ratelimit.v3.ProcessRateLimitFilter>`.
 - area: udp_sink
   change: |
     Enhanced the UDP sink to support tapped messages larger than 64 KB.
