--- a/test/extensions/access_loggers/stats/BUILD
+++ b/test/extensions/access_loggers/stats/BUILD
@@ -12,6 +12,18 @@ licenses(["notice"])  # Apache 2
 envoy_package()
 
 envoy_extension_cc_test(
+    name = "stats_test",
+    srcs = ["stats_test.cc"],
+    extension_names = ["envoy.access_loggers.stats"],
+    deps = [
+        "//source/common/formatter:stream_info_formatter_extension_lib",
+        "//source/extensions/access_loggers/stats:stats_lib",
+        "//test/mocks/server:factory_context_mocks",
+        "//test/mocks/stream_info:stream_info_mocks",
+    ],
+)
+
+envoy_extension_cc_test(
     name = "integration_test",
     size = "large",
     srcs = ["integration_test.cc"],
