outlier detection: add passive degraded host detection
Add degraded status to outlier detection.
Degrade is an existing feature for active health check. Outlier detection (a.k.a. passive health check) doesn't recognize degraded now. This change adds degraded health status to the outlier detection. Hosts that return 2xx responses with the x-envoy-degraded header are marked as degraded. Degraded hosts are deprioritized in load balancing but remain in rotation (not ejected).

Risk Level: Medium
This is a new optional feature that is disabled by default. When enabled, it changes load balancing behavior by deprioritizing hosts that report degraded state.
The implementation of degrade/undegrade mirrors the existing eject/uneject, but separate code, so it's non-intrusive to eject/uneject logic.

Testing
- Unit tests added in outlier_detection_impl_test.cc covering:
- Tests verify integration between router and outlier detection components with local build and triggering degrade via outlier detection.

Docs Changes
- Added new configuration field detect_degraded in api/envoy/config/cluster/v3/outlier_detection.proto
- Added new host status failed_outlier_degraded_check in api/envoy/admin/v3/clusters.proto

Signed-off-by: x48zhu <zhuxi28@hotmail.com>

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -273,5 +273,12 @@ new_features:
   change: |
     Added new ``US_RX_BODY_BEG`` time point to the ``%COMMON_DURATION%`` to indicate
     the time point of upstream response body receiving begin.
+- area: outlier_detection
+  change: |
+    Added :ref:`detect_degraded <envoy_v3_api_field_config.cluster.v3.OutlierDetection.detect_degraded>`
+    to enable passive degraded host detection. When enabled, outlier detection marks hosts as degraded when they return
+    the ``x-envoy-degraded`` header with successful (2xx) responses. Degraded hosts are deprioritized in load balancing
+    but remain in rotation (not ejected). The feature uses the same backoff algorithm as ejection with configurable
+    base and maximum timeout parameters. Defaults to false.
 
 deprecated:
