--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -108,7 +108,8 @@ new_features:
     Added :ref:`load_stats_over_ads_config_connection
     <envoy_v3_api_field_config.bootstrap.v3.ClusterManager.load_stats_over_ads_config_connection>`
     that makes the load reporting server use the primary server connection specified by the
-    :ref:`ads_config <envoy_v3_api_field_config.bootstrap.v3.Bootstrap.DynamicResources.ads_config>`.
+    :ref:`ads_config <envoy_v3_api_field_config.bootstrap.v3.Bootstrap.DynamicResources.ads_config>`. If the
+    `ads_config` is replaced, the LRS will also be replaced.
 - area: http
   change: |
     Added :ref:`vhost_header <envoy_v3_api_field_config.route.v3.RouteConfiguration.vhost_header>` to
