--- a/source/common/formatter/BUILD
+++ b/source/common/formatter/BUILD
@@ -104,6 +104,7 @@ envoy_cc_library(
         "//source/common/http:utility_lib",
         "//source/common/json:json_loader_lib",
         "//source/common/json:json_utility_lib",
+        "//source/common/network:downstream_network_namespace_lib",
         "//source/common/protobuf:message_validator_lib",
         "//source/common/stream_info:utility_lib",
     ],
