--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -103,6 +103,10 @@ bug_fixes:
     were not accessible in ``request_headers_to_add`` configuration on the initial request. Headers configured via
     ``request_headers_to_add`` can now reference router-set headers using formatters like
     ``%REQ(x-envoy-expected-rq-timeout-ms)%``.
+- area: ext_proc
+  change: |
+    Fixed a bug where attributes based on request headers (e.g. ``request.host``) were not sent to
+    the ext_proc server if ext_proc was configured to only run on the encode path.
 
 removed_config_or_runtime:
 # *Normally occurs at the end of the* :ref:`deprecation period <deprecated>`
