memory: configure and enforce unfreed memory threshold
Signed-off-by: Ronak Jain <ronakjainc@gmail.com>

--- a/envoy/server/BUILD
+++ b/envoy/server/BUILD
@@ -117,6 +117,7 @@ envoy_cc_library(
         ":hot_restart_interface",
         ":lifecycle_notifier_interface",
         ":listener_manager_interface",
+        ":memory_interface",
         ":options_interface",
         "//envoy/access_log:access_log_interface",
         "//envoy/api:api_interface",
@@ -135,6 +136,14 @@ envoy_cc_library(
         "//envoy/tracing:tracer_interface",
         "//envoy/upstream:cluster_manager_interface",
         "@envoy_api//envoy/config/trace/v3:pkg_cc_proto",
+    ],
+)
+
+envoy_cc_library(
+    name = "memory_interface",
+    hdrs = ["memory.h"],
+    deps = [
+        "//envoy/common:pure_lib",
     ],
 )
 
