--- a/source/extensions/config_subscription/grpc/xds_mux/BUILD
+++ b/source/extensions/config_subscription/grpc/xds_mux/BUILD
@@ -65,9 +65,9 @@ envoy_cc_extension(
         ":sotw_subscription_state_lib",
         "//envoy/event:dispatcher_interface",
         "//envoy/grpc:async_client_interface",
+        "//envoy/server:memory_interface",
         "//source/common/config:xds_context_params_lib",
         "//source/common/config:xds_resource_lib",
-        "//source/common/memory:utils_lib",
         "//source/extensions/config_subscription/grpc:eds_resources_cache_lib",
         "//source/extensions/config_subscription/grpc:grpc_mux_context_lib",
         "//source/extensions/config_subscription/grpc:grpc_mux_failover_lib",
