--- a/test/extensions/config_subscription/grpc/BUILD
+++ b/test/extensions/config_subscription/grpc/BUILD
@@ -29,6 +29,7 @@ envoy_cc_test(
         "//test/mocks/grpc:grpc_mocks",
         "//test/mocks/local_info:local_info_mocks",
         "//test/mocks/runtime:runtime_mocks",
+        "//test/mocks/server:memory_mocks",
         "//test/test_common:logging_lib",
         "//test/test_common:resources_lib",
         "//test/test_common:simulated_time_system_lib",
@@ -62,6 +63,7 @@ envoy_cc_test(
         "//test/mocks/grpc:grpc_mocks",
         "//test/mocks/local_info:local_info_mocks",
         "//test/mocks/runtime:runtime_mocks",
+        "//test/mocks/server:memory_mocks",
         "//test/test_common:logging_lib",
         "//test/test_common:resources_lib",
         "//test/test_common:simulated_time_system_lib",
@@ -90,6 +92,7 @@ envoy_cc_test(
         "//test/mocks/grpc:grpc_mocks",
         "//test/mocks/local_info:local_info_mocks",
         "//test/mocks/runtime:runtime_mocks",
+        "//test/mocks/server:memory_mocks",
         "//test/test_common:logging_lib",
         "@envoy_api//envoy/config/core/v3:pkg_cc_proto",
         "@envoy_api//envoy/config/endpoint/v3:pkg_cc_proto",
@@ -179,6 +182,7 @@ envoy_cc_test(
         "//test/mocks/grpc:grpc_mocks",
         "//test/mocks/local_info:local_info_mocks",
         "//test/mocks/runtime:runtime_mocks",
+        "//test/mocks/server:memory_mocks",
         "//test/test_common:logging_lib",
         "//test/test_common:resources_lib",
         "//test/test_common:simulated_time_system_lib",
