--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -132,5 +132,9 @@ new_features:
     Add a new quic configuration field, 'max_sessions_per_event_loop', to QuicProtocolOptions in Envoy listener.
     This allows tuning the maximum number of new QUIC sessions created within a single event loop.
     The default value is 16, preserving the previous hardcoded limit.
+- area: formatter
+  change: |
+    Added new ``US_RX_BODY_BEG`` time point to the ``%COMMON_DURATION%`` to indicate
+    the time point of upstream response body receiving begin.
 
 deprecated:
