--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -49,6 +49,11 @@ minor_behavior_changes:
   change: |
     Check that the response header count is less than the configured limits before applying mutations, and do not
     add new headers if not.
+- area: ext_authz
+  change: |
+    Fixed HTTP ext_authz service to properly propagate headers (such as ``set-cookie``) back to clients. The
+    filter now correctly uses ``allowed_client_headers`` for denied responses and ``allowed_client_headers_on_success``
+    for successful authorization responses.
 - area: quic
   change: |
     Switch to use QUICHE provided migration logic to handle port migration upon path degrading and migration to Server
