--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -368,6 +368,8 @@ extensions/upstreams/tcp @ggreenway @mattklein123
 /*/extensions/string_matcher/ @ggreenway @cpakulski
 # Header mutation
 /*/extensions/filters/http/header_mutation @wbpcode @yanavlasov
+# Body transform
+/*/extensions/filters/http/transform @wbpcode @UNOWNED
 # Health checkers
 /*/extensions/health_checkers/grpc @zuercher @botengyao
 /*/extensions/health_checkers/http @zuercher @botengyao
