--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -142,6 +142,11 @@ removed_config_or_runtime:
     Removed runtime guard ``envoy.reloadable_features.report_load_with_rq_issued`` and legacy code paths.
 
 new_features:
+- area: http filter
+  change: |
+    Added :ref:`transform http filter <config_http_filters_transform>` which adds the ability to modify request
+    and response bodies in any position of HTTP filter chain.
+    This also make it possible to refresh routes based on the attributes in the request body.
 - area: access_log
   change: |
     Support process-level rate limiting on access log emission by
