--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -259,6 +259,9 @@ new_features:
   change: |
     Added runtime guard ``envoy.reloadable_features.report_load_when_rq_active_is_non_zero``.
     When enabled, LRS continues to send locality_stats reoprt to config server when there is no request_issued in the poll cycle.
-
+- area: formatter
+  change: |
+    Added new ``US_RX_BODY_BEG`` time point to the ``%COMMON_DURATION%`` to indicate
+    the time point of upstream response body receiving begin.
 
 deprecated:
