router: added request_mirror_policies to cluster (#41834)
## Description

This PR adds `request_mirror_policies` to the cluster for enabling
request mirroring to be configured at the cluster level. When
configured, all requests routed to the cluster will be mirrored
according to the specified policies.

It's very helpful to have this for ExtProc, ExtAuthZ, RateLimit, etc.

Fix https://github.com/envoyproxy/envoy/issues/21131

---

**Commit Message:** router: added request_mirror_policies to cluster
**Additional Description:** Adds `request_mirror_policies` to the
cluster for enabling request mirroring to be configured at the cluster
level.
**Risk Level:** Low
**Testing:** Added Unit + Integration Tests
**Docs Changes:** Added
**Release Notes:** Added

---------

Signed-off-by: Rohit Agrawal <rohit.agrawal@databricks.com>
Signed-off-by: yanavlasov <yavlasov@google.com>
Co-authored-by: yanavlasov <yavlasov@google.com>

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -259,6 +259,11 @@ new_features:
   change: |
     Added runtime guard ``envoy.reloadable_features.report_load_when_rq_active_is_non_zero``.
     When enabled, LRS continues to send locality_stats reoprt to config server when there is no request_issued in the poll cycle.
+- area: router
+  change: |
+    Added :ref:`request_mirror_policies <envoy_v3_api_field_extensions.upstreams.http.v3.HttpProtocolOptions.request_mirror_policies>`
+    to :ref:`HttpProtocolOptions <envoy_v3_api_msg_extensions.upstreams.http.v3.HttpProtocolOptions>` to support
+    cluster-level request mirroring. Cluster-level policies override route-level policies when both are configured.
 - area: network
   change: |
     Add logging info for network ext_proc to filter state.
