feat: add mobile module and build configuration for Envoy
Signed-off-by: Matthieu MOREL <matthieu.morel35@gmail.com>

--- a/.bcr/mobile/presubmit.yml
+++ b/.bcr/mobile/presubmit.yml
@@ -13,15 +13,8 @@ tasks:
     platform: ${{ unix_platform }}
     bazel: ${{ bazel }}
     build_targets:
-    - "@envoy_api//envoy/..."
+    - "@envoy_mobile//library/..."
     build_flags:
-    - "--java_runtime_version=remotejdk_21"
-    - "--cxxopt=-std=c++20"
-    - "--host_cxxopt=-std=c++20"
-    test_targets:
-    - "@envoy_api//test/..."
-    - "@envoy_api//tools/..."
-    test_flags:
     - "--java_runtime_version=remotejdk_21"
     - "--cxxopt=-std=c++20"
     - "--host_cxxopt=-std=c++20"
