--- a/mobile/.bazelrc
+++ b/mobile/.bazelrc
@@ -34,6 +34,9 @@ build --define=envoy_full_protos=disabled
 build --define envoy_exceptions=disabled
 build: --copt=-fno-exceptions
 
+# Enable experimental Google legacy API for rules_android 0.5.1 compatibility
+common --experimental_google_legacy_api
+
 # We don't have a ton of Swift in Envoy Mobile, so always build with WMO
 # This also helps work around a bug in rules_swift: https://github.com/bazelbuild/rules_swift/issues/949
 build --swiftcopt=-wmo
