--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -138,6 +138,11 @@ removed_config_or_runtime:
     Removed runtime guard ``envoy.reloadable_features.report_load_with_rq_issued`` and legacy code paths.
 
 new_features:
+- area: oauth2
+  change: |
+    Added support for configuring cookie path in OAuth2 filter. The :ref:`path
+    <envoy_v3_api_field_extensions.filters.http.oauth2.v3.CookieConfig.path>` field can now be set
+    for each cookie type to control the scope of OAuth2 cookies.
 - area: http filter
   change: |
     Added :ref:`transform http filter <config_http_filters_transform>` which adds the ability to modify request
