--- a/.github/workflows/_run.yml
+++ b/.github/workflows/_run.yml
@@ -281,7 +281,7 @@ jobs:
         key: ${{ inputs.cache-build-image }}${{ inputs.cache-build-image-key-suffix }}
     - if: ${{ inputs.cache-build-image && steps.cache-lookup.outputs.cache-hit == 'true' }}
       name: Restore Docker cache ${{ inputs.cache-build-image && format('({0})', inputs.cache-build-image) || '' }}
-      uses: envoyproxy/toolshed/gh-actions/docker/cache/restore@actions-v0.3.28
+      uses: envoyproxy/toolshed/gh-actions/docker/cache/restore@b6ac3239c4b62b75643b6095ef48595de5b7fdc1
       with:
         image-tag: ${{ inputs.cache-build-image }}
         key-suffix: ${{ inputs.cache-build-image-key-suffix }}
