--- a/test/extensions/filters/http/proto_api_scrubber/BUILD
+++ b/test/extensions/filters/http/proto_api_scrubber/BUILD
@@ -28,8 +28,10 @@ envoy_cc_test(
         "//test/mocks/server:factory_context_mocks",
         "//test/proto:apikeys_proto_cc_proto",
         "//test/test_common:environment_lib",
+        "//test/test_common:status_utility_lib",
         "//test/test_common:utility_lib",
         "@com_github_cncf_xds//xds/type/matcher/v3:pkg_cc_proto",
+        "@com_google_absl//absl/status",
     ],
 )
 
