--- a/source/extensions/local_address_selectors/linux_network_namespace/BUILD
+++ b/source/extensions/local_address_selectors/linux_network_namespace/BUILD
@@ -1,7 +1,6 @@
 load(
     "//bazel:envoy_build_system.bzl",
     "envoy_cc_extension",
-    "envoy_cc_library",
     "envoy_extension_package",
 )
 
@@ -14,7 +13,10 @@ envoy_cc_extension(
     srcs = ["config.cc"],
     hdrs = ["config.h"],
     deps = [
+        "//envoy/registry",
         "//envoy/upstream:upstream_interface",
+        "//source/common/upstream:default_local_address_selector_factory",
         "@com_google_absl//absl/types:optional",
+        "@envoy_api//envoy/extensions/local_address_selectors/linux_network_namespace/v3:pkg_cc_proto",
     ],
 )
