--- a/.github/workflows/_run.yml
+++ b/.github/workflows/_run.yml
@@ -341,18 +341,11 @@ jobs:
       if: >-
         ${{ fromJSON(inputs.request).request.pr != '' }}
     - uses: envoyproxy/toolshed/gh-actions/gcp/setup@actions-v0.3.29
-      name: Setup GCP (artefacts/rbe)
+      name: Setup GCP (artefacts)
       id: gcp
       with:
         key: ${{ secrets.gcp-key }}
         key-copy: ${{ inputs.rbe-google && runner.temp || '' }}
-    - run: |
-        GCP_SERVICE_ACCOUNT_KEY_FILE="$(basename "${{ steps.gcp.outputs.key-copy-path }}")"
-        echo "GCP_SERVICE_ACCOUNT_KEY_PATH=/build/${GCP_SERVICE_ACCOUNT_KEY_FILE}" >> "$GITHUB_ENV"
-        BAZEL_BUILD_EXTRA_OPTIONS="--google_credentials=/build/${GCP_SERVICE_ACCOUNT_KEY_FILE} --config=rbe-google"
-        echo "BAZEL_BUILD_EXTRA_OPTIONS=${BAZEL_BUILD_EXTRA_OPTIONS}" >> "$GITHUB_ENV"
-      if: ${{ steps.gcp.outputs.key-copy-path }}
-      name: Setup Google RBE
     - run: |
         echo "${{ vars.ENVOY_CI_BAZELRC }}" > repo.bazelrc
       if: ${{ vars.ENVOY_CI_BAZELRC }}
