--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -156,7 +156,7 @@ new_features:
     configurable metrics.
 - area: otlp_stat_sink
   change: |
-    Fix start_time_unix_nano for the metrics exported.
+    Fix ``start_time_unix_nano`` and ``time_unix_nano`` for the metrics exported.
 - area: otlp_stat_sink
   change: |
     Added support for dropping stats via
