--- a/test/extensions/filters/http/ext_proc/BUILD
+++ b/test/extensions/filters/http/ext_proc/BUILD
@@ -213,6 +213,12 @@ envoy_extension_cc_test(
     size = "small",
     srcs = ["mapped_attribute_builder_test.cc"],
     extension_names = ["envoy.filters.http.ext_proc"],
+    copts = select({
+        "//bazel:windows_x86_64": [],
+        "//conditions:default": [
+            "-DUSE_CEL_PARSER",
+        ],
+    }),
     rbe_pool = "6gig",
     tags = ["skip_on_windows"],
     deps = [
