--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -147,6 +147,10 @@ new_features:
   change: |
     Support process-level rate limiting on access log emission by
     :ref:`ProcessRateLimitFilter <envoy_v3_api_msg_extensions.access_loggers.filters.process_ratelimit.v3.ProcessRateLimitFilter>`.
+- area: dynamic modules
+  change: |
+    Enhanced dynamic module ABIs to support headers addition and body size retrieval.
+    See the latest ABI header file for more details.
 - area: udp_sink
   change: |
     Enhanced the UDP sink to support tapped messages larger than 64 KB.
